--- a/Web_interface/styles.css
+++ b/Web_interface/styles.css
@@ -40,7 +40,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     padding: 2px 16px;
-    margin-top: 16px;
+    margin-top: 8px;
     border-radius: 5px;
     background-color: white;
 }
@@ -55,21 +55,41 @@
     padding-bottom: 16px;
 }
 
-.file_list_line {
-    border-left: 6px solid green;
-    height: 100%;
-    position: absolute;
-    left: 10%;
-    margin-left: -3px;
-    top: 0;
+.system_info_container {
+    background-color: rgb(148, 152, 155);
+    border-radius: 5px;
+    font-size: 14px;
+    font-family: Roboto;
+    color: white;
+    padding: 16px;
+    white-space: pre-wrap;
+}
+
+.system_info_container_header {
+    background-color: rgb(202, 206, 201);
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.file_list_item_container {
+    border-left: 6px solid #2196F3;
+    margin-top: 5px;
+    border-radius: 2px;
+    background: lightgray;
+    height: 40px;
+    display: block;
+    display: flex;
+    align-items: center;
 }
 
 .file_list_text {
     font-size: 18px;
     font-family: Roboto;
-    color: darkgray;
+    color: black;
     text-decoration: none;
-    display: block;
+    text-decoration-color: black;
+    margin-left: 16px;
 }
 
 .sub_title {
